--- a/.github/workflows/all-contributors.yml
+++ b/.github/workflows/all-contributors.yml
@@ -25,9 +25,4 @@ jobs:
       - run: npx all-contributors-cli generate
       - name: Commit changes
         shell: bash
-        run: |
-          git config --global user.email "github-actions[bot]@users.noreply.github.com" && \
-          git config --global user.name "github-actions[bot]" && \
-          git add README.md .all-contributorsrc && \
-          git commit -m 'add ${{github.event.inputs.name}} contributor for ${{github.event.inputs.contributions}}' && \
-          git push
+        run: git push
